2008-09-18  Ramon Novoa  <rnovoa@artica.es>

	* include/config_process.php,
	  include/functions_db.php: Small fixes.
	* godmode/servers/manage_export.php,
	  godmode/servers/manage_export_form.php: Added to repository. Export
	  target configuration.
	* godmode/menu.php,
	  pandoradb.sql: Added support for export target configuration.

2008-09-18  Sancho Lerena <slerena@artica.es>

	* install.php: Fixed a bad description string.

	* pandoradb.sql: Precission for the float in post_process was
	insignificant (2 decimals), not valid to transform from bytes
	to MB for example, altered to have 13 decimals. Thanks to 
	darkgate for this bug report.

2008-09-17  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* operation/visual_console/render_view.php: Removed short tags.
	Used new functions for login check. Removed unnecessary global

	* operation/agentes/estado_alertas.php: Fixed a minor bug

	* godmode/reporting/map_builder.php: Removed short tags

2008-09-16  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* operation/agentes/estado_alertas.php: Fixed a few bugs and made it
	faster by switching to the general functions. Style update

	* include/functions_db.php: Made get_agents_in_group() function accept
	array or a comma delimited list. This will allow us to get agents in
	multiple groups. Backwards compatible (single value passed). Set an
	output check on empty (array or false) for get_alerts_in_group().

	* include/functions.php: Made get_alert_days() output translatable.
	Made the little columns with info on alerts give more text (it does
	fit). Made show_alert_show_view() use the internal functions to
	retrieve name and id's. Style updates, better HTML output (tags).

2008-09-12  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* godmode/agentes/configurar_agente.php: Style updates for create agent
	and update agent. Fixed a bug where empty and duplicate names would
	be allowed when updating. Made some strings translatable and more
	extensive error messages.
